[package]
name = "json-tools"
version = "0.1.0"
authors = ["bingryan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.61"
serde = "1.0.120"

format = { path = "module/format" }
error = { path = "module/error" }

[workspace]
members = [
    "module/format",
    "module/error",
    # bin
    "bin/json",
    "bin/timestamp",
    "bin/sys"
]