[package]
name = "json-tools"
version = "0.1.0"
authors = ["bingryan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.61"
serde = "1.0.120"

content_inspector = "0.2.4"

format = { path = "module/format" }
error = { path = "module/error" }
input = { path = "module/input" }
app = { path = "module/app" }
common = { path = "module/common" }

[workspace]
members = [
    "module/format",
    "module/error",
    "module/input",
    "module/app",
    "module/common",
    # bin
    "bin/json",
    "bin/jtime",
#    "bin/sys"
]