[package]
name = "app"
version = "0.1.0"
authors = ["bingryan <bingryan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0.36"
wild = "2.0.4"
ansi_term = "0.12.1"
atty = "0.2.14"

input = {path = "../../module/input"}